fix(docs-infra): fix About page button text being truncated on small screens
On small screens (e.g. on mobile), the text on some of the buttons in
the About page was truncated. Changed the text size, margin and
padding so that the the whole text is visible on such screens (320px to
480px).

--- a/aio/src/styles/2-modules/_contributor.scss
+++ b/aio/src/styles/2-modules/_contributor.scss
@@ -19,6 +19,14 @@ aio-contributor-list {
 .group-buttons {
   margin: 32px auto;
 
+  @media (max-width: 480px) {
+    .filter-button.button {
+      font-size: 1.2rem;
+      padding: 0;
+      margin: 0;
+    }
+  }
+
   a {
     &.selected {
       background-color: $blue;
